--- a/Flask-Web-App-Tutorial/website/templates/base.html
+++ b/Flask-Web-App-Tutorial/website/templates/base.html
@@ -85,6 +85,15 @@
     window.location.href = "/";
   });
   }
+  function updateNote(noteId, updatedContent) {
+        fetch("/update-note", {
+            method: "POST",
+            body: JSON.stringify({ noteId: noteId, updatedContent: updatedContent }),
+        }).then((_res) => {
+          
+            window.location.href = "/";
+        });
+    }
 </script>
 {% endblock %}
   </body>
