--- a/Flask-Web-App-Tutorial/website/templates/profile.html
+++ b/Flask-Web-App-Tutorial/website/templates/profile.html
@@ -1,26 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{% block title %}Profile{% endblock %}</title>
-    <!-- Add any additional styles or meta tags if needed -->
-</head>
-<body>
-    <h1>Welcome to your profile, {{ user.username }}!</h1>
+{% extends "base.html" %}
+
+{% block title %}Profile{% endblock %}
+
+{% block content %}
+    <h1>Welcome to your profile ,{{ user.first_name }}!</h1>
 
     <form method="POST" action="/update-profile">
         <label for="email">Email:</label>
-        <input type="text" id="email" name="email" value="{{ user.email }}" required>
+        <input type="text" id="email" class="form-control" name="email" value="{{ user.email }}" required>
         <br>
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="Enter new password">
+        <input type="password" id="password" class="form-control" name="password" placeholder="Enter new password">
         <br>
 
         <label for="first_name">First Name:</label>
-        <input type="text" id="first_name" name="first_name" value="{{ user.first_name }}" required>
+        <input type="text" id="first_name" class="form-control" name="first_name" value="{{ user.first_name }}" required>
         <br>
 
-        <button type="submit">Update Profile</button>
+        <button type="submit" class="btn btn-primary">Update Profile</button>
     </form>
-</body>
-</html>
+{% endblock %}
