--- a/Flask-Web-App-Tutorial/website/templates/home.html
+++ b/Flask-Web-App-Tutorial/website/templates/home.html
@@ -50,7 +50,7 @@
         });
     }
     function updateNotePrompt(noteId) {
-        const updatedContent = prompt("HAHAHAHAHAHAHAH WAY KLASE LEZGOOO(TRY DAW EDITT OG MO GANA ):");
+        const updatedContent = prompt("Edit Note:");
         if (updatedContent !== null) {
             updateNote(noteId, updatedContent);
         }
